# ext4-win-driver

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  harness.toml  test-matrix.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
.history/: README_20260507172055.md  README_20260507194131.md
docs/: post-verify-hook.md
fixtures/: build-whole-disk.py
installer/: Bundle.wxs  Mount-Ext4.ps1  Product.wxs  README.md  build.ps1  update-winfsp-pin.sh  verify-silent.ps1
scripts/: verify-cat.sh  verify-info.sh  verify-ls.sh  verify-parts.sh  verify-stat.sh  verify-tree.sh
src/: cmd.rs  device.rs  main.rs  mount.rs  partition.rs  probe.rs  service.rs  watch.rs
winget/: README.md
winget/v0.1.0/: AntimatterStudios.ext4-win-driver.installer.yaml
winget/v0.2.0/: AntimatterStudios.ext4-win-driver.installer.yaml  AntimatterStudios.ext4-win-driver.locale.en-US.yaml  AntimatterStudios.ext4-win-driver.yaml
