[package]
name = "ext4-win-driver"
version = "0.1.0"
edition = "2021"
# GPL-3.0 because the WinFsp Rust bindings (`winfsp` crate) are GPL-3.0.
# The CLI alone (without the `mount` feature) does not link winfsp and
# could be relicensed if ever split out, but to keep the distribution
# unit single-licensed we declare GPL-3.0 here.
license = "GPL-3.0"
description = "Browse and mount ext4 filesystems on Windows (CLI + WinFsp driver)"

[[bin]]
name = "ext4"
path = "src/main.rs"

[dependencies]
fs-ext4 = { path = "../rust-fs-ext4" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }
# WinFsp + helpers. Optional + Windows-target-only — pulled in when the
# `mount` feature is enabled AND the build target is Windows. On macOS
# the `mount` feature does nothing (the cfg-gated module is empty).
#
# Path-depended on a local fork of winfsp-rs while the gnullvm-target
# patch is upstreamed. The patch lifts `winfsp-sys/build.rs`'s MSVC-only
# gate so the same MSVC-format .lib (consumed via lld-link) works for
# *-pc-windows-gnullvm Rust toolchains too.
winfsp = { path = "../winfsp-rs/winfsp", features = ["delayload", "system"], optional = true, default-features = false }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
], optional = true }
winfsp-sys = { path = "../winfsp-rs/winfsp-sys", optional = true }
widestring = { version = "1", optional = true }
ctrlc = { version = "3", optional = true }

[target.'cfg(windows)'.build-dependencies]
# Only used when the `mount` feature is on; build.rs guards the call.
# `delayload` implies the `build` feature in winfsp's Cargo.toml.
winfsp = { path = "../winfsp-rs/winfsp", features = ["delayload"], default-features = false }

[features]
default = []
# Enables the `mount` subcommand (WinFsp driver). Active only on Windows
# — on other targets the deps don't resolve and the cfg-gated code is
# absent.
mount = ["dep:winfsp", "dep:winfsp-sys", "dep:windows", "dep:widestring", "dep:ctrlc"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
