[package]
name = "ext4-win-driver"
version = "0.2.0"
edition = "2021"
# GPL-3.0 because the WinFsp Rust bindings (`winfsp` crate) are GPL-3.0.
# The CLI alone (without the `mount` feature) does not link winfsp and
# could be relicensed if ever split out, but to keep the distribution
# unit single-licensed we declare GPL-3.0 here.
license = "GPL-3.0"
description = "Browse and mount ext4 filesystems on Windows (CLI + WinFsp driver)"

[[bin]]
name = "ext4"
path = "src/main.rs"

[dependencies]
fs-ext4 = { path = "vendor/rust-fs-ext4" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# winfsp-fs-skeleton owns the SCM dispatcher, disk-arrival event pump,
# partition walker, raw-device I/O with sector alignment, and drive-
# letter selection. We supply only the ext4-specific superblock-magic
# detect via the FsBackend trait. The skeleton has cross-platform stubs
# for non-windows hosts so it stays in [dependencies], not the
# windows-only block.
winfsp-fs-skeleton = { path = "vendor/winfsp-fs-skeleton", default-features = false }

[target.'cfg(windows)'.dependencies]
# Aligned with winfsp-fs-skeleton's pin so cargo resolves a single
# windows-sys instance rather than compiling 0.59 + 0.61 side by side.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }
# `watch` subcommand uses ctrlc on Windows. Pulled in unconditionally on
# Windows so `watch` builds without the `mount` feature; on non-Windows
# targets `watch` is a stub and ctrlc isn't needed.
ctrlc = "3"
# WinFsp + helpers. Optional + Windows-target-only — pulled in when the
# `mount` feature is enabled AND the build target is Windows. On macOS
# the `mount` feature does nothing (the cfg-gated module is empty).
#
# Path-depended on the antimatter-studios fork of winfsp-rs (vendored
# under vendor/winfsp-rs) until our gnullvm-support PR lands upstream
# at SnowflakePowered/winfsp-rs. The patch lifts winfsp-sys/build.rs's
# MSVC-only gate so the same MSVC-format .lib (consumed via lld-link)
# works for *-pc-windows-gnullvm Rust toolchains too.
winfsp = { path = "vendor/winfsp-rs/winfsp", features = ["delayload", "system"], optional = true, default-features = false }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
], optional = true }
winfsp-sys = { path = "vendor/winfsp-rs/winfsp-sys", optional = true }
widestring = { version = "1", optional = true }

[target.'cfg(windows)'.build-dependencies]
# Only used when the `mount` feature is on; build.rs guards the call.
# `delayload` implies the `build` feature in winfsp's Cargo.toml.
winfsp = { path = "vendor/winfsp-rs/winfsp", features = ["delayload"], default-features = false }

[features]
default = []
# Enables the `mount` subcommand (WinFsp driver). Active only on Windows
# — on other targets the deps don't resolve and the cfg-gated code is
# absent.
mount = ["dep:winfsp", "dep:winfsp-sys", "dep:windows", "dep:widestring"]
# Enables the `service` subcommand (Windows Service variant of the
# auto-mount watcher). Forwards to winfsp-fs-skeleton's `service`
# feature, which pulls in `windows-service` for the SCM dispatcher.
# Independent of `mount` -- the service shells out to
# `launchctl-<arch>.exe` rather than linking WinFsp itself. On
# non-Windows the subcommand handler is a stub.
service = ["winfsp-fs-skeleton/service"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
# panic = "abort" is the right semantics for a binary that runs as a
# Windows Service: no human is around to read a panic message, and
# unwinding the SCM-controlled main thread would only delay the
# inevitable termination. (The `libunwind.dll` runtime dependency that
# breaks SCM-launched session-0 binaries is dropped separately via
# .cargo/config.toml's `+crt-static` for the gnullvm targets -- panic
# strategy alone wasn't enough; the C runtime itself pulls in libunwind
# for SEH handling on aarch64 and only crt-static drops it.)
panic = "abort"
